*jekyll-coffeescript-1.0.0 (14 Feb 2014)

  14 Feb 2014; Manuel Rüger <mrueg@gentoo.org>
  +jekyll-coffeescript-1.0.0.ebuild, +metadata.xml:
  [www-apps/jekyll-coffeescript] Initial ebuild.